fix(card): Fix subtitle spacing visibility within vertical content

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -10,10 +10,12 @@
             flex-direction: column;
             align-items: center; 
             width: 100%;
+            margin-bottom: var(--composer-gap-md);
             .subtitle{
                 text-align: center;
                 transform: translateX(0) !important;
                 margin: 0 auto;
+                margin-bottom: var(--composer-gap-sm);
                 &::before{
                     display: none;
                 }
